Bug 26971 - xserver --enable-debug compile error in hw/xfree86/common/xf86Config.c
Summary: xserver --enable-debug compile error in hw/xfree86/common/xf86Config.c
Status: CLOSED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Server/General (show other bugs)
Version: git
Hardware: All All
: medium normal
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2010-03-09 00:33 UTC by Adrian Bunk
Modified: 2019-03-14 09:20 UTC (History)
6 users (show)

See Also:
i915 platform:
i915 features:


Attachments
spam (17.89 KB, image/png)
2019-03-14 07:50 UTC, ch.hasnat23@gmail.com (Account disabled)
no flags Details

Description Adrian Bunk 2010-03-09 00:33:45 UTC
The following build error with --enable-debug was introduced by commit e1165632bdfbd720889ed1adf5f7ab338032c0ee (xfree86: Add Option AutoServerLayout for input devices.):

<--  snip  -->

...
 gcc -DHAVE_CONFIG_H -I. -I. -I../../../include -I../../../include -I../../../include -I../../../include -I../../../include -I../../../include -I../../../include -I../../../include -I../../../hw/xfree86 -I../../../hw/xfree86/include -I../../../hw/xfree86/common -I../../../hw/xfree86/os-support -I../../../hw/xfree86/os-support/bus -I../../../os -I./../ddc -I./../i2c -I./../loader -I./../parser -I./../vbe -I./../int10 -I./../vgahw -I./../dixmods/extmod -I./../modes -I./../ramdac -DHAVE_DIX_CONFIG_H -Wall -Wpointer-arith -Wstrict-prototypes -Wmissing-prototypes -Wmissing-declarations -Wnested-externs -fno-strict-aliasing -Wbad-function-cast -Wformat=2 -Wold-style-definition -Wdeclaration-after-statement -D_BSD_SOURCE -DHAS_FCHOWN -DHAS_STICKY_DIR_BIT -I/usr/include/freetype2 -I/usr/include/pixman-1 -I../../../include -I../../../include -I../../../Xext -I../../../composite -I../../../damageext -I../../../xfixes -I../../../Xi -I../../../mi -I../../../miext/shadow -I../../../miext/damage -I../../../render -I../../../randr -I../../../fb -fvisibility=hidden -DHAVE_XORG_CONFIG_H -fvisibility=hidden -DXF86PM -g -O2 -MT xf86Config.lo -MD -MP -MF .deps/xf86Config.Tpo -c xf86Config.c  -fPIC -DPIC -o .libs/xf86Config.o
xf86Config.c: In function 'configInputDevices':
xf86Config.c:1514: error: request for member 'lay_identifier' in something not a structure or union
make[5]: *** [xf86Config.lo] Error 1

<--  snip  -->
Comment 1 Peter Hutterer 2010-03-16 18:14:27 UTC
commit df9f3273041c6c3e0da2d2254e8c156cd582e296
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Wed Mar 10 09:24:32 2010 +1000

    xfree86: fix xf86Config.c build error in --enable-debug mode. (#26971)
Comment 2 ch.hasnat23@gmail.com (Account disabled) 2019-03-14 07:50:20 UTC
Created attachment 143656 [details]
spam

Sorry, I am not supposed to tell you this !!!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.